# mido-finance

./: README.md  package.json
mido-app/: package.json
mido-landing/: db.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
mido-landing/app/: layout.tsx  page.tsx  sol_staking.json
mido-landing/app/actions/: leaderboard.ts  stake.ts  user.ts
mido-landing/app/leaderboard/: page.tsx
mido-landing/app/stake/: page.tsx
mido-landing/app/user/: page.tsx
mido-landing/app/whitepaper/: page.tsx
mido-landing/components/: Home.tsx  Stake.tsx  User.tsx  navbar.tsx
mido-landing/components/framer/: MotionSection.tsx  MotionWrapper.tsx
mido-landing/components/home/: Benefits.tsx  Dashboard.tsx  Footer.tsx  GreenIndex.tsx  Hero.tsx  HowItWorks.tsx  NFT.tsx  Partnerships.tsx  Roadmap.tsx
mido-landing/components/landing/: FeatureCard.tsx  GradientButton.tsx  Roadmap.tsx  SplineBackground.tsx
mido-landing/context/: WalletContextProvider.tsx
mido-landing/lib/: program.ts
mido-landing/prisma/: schema.prisma
mido-landing/prisma/migrations/20240924160449_init_schema/: migration.sql
programs/: Anchor.toml
programs/programs/programs/: Cargo.toml
sol-staking/: Anchor.toml  package-lock.json  package.json
sol-staking/client/: client.ts
sol-staking/programs/sol-staking/: Cargo.toml
sol-staking/programs/sol-staking/src/: lib.rs
sol-staking/scripts/: initialize.ts
sol-staking/tests/: anchor.ts
stake/: Anchor.toml
stake/programs/stake/: Cargo.toml
stake/programs/stake/src/: lib.rs
stake/tests/: stake.ts
(+2 files in other folders)
